# cppcourse-brunel

./: CMakeLists.txt  Membpotfile  README.md  fichier_const.hpp  mainneuron.cpp  network.cpp  network.hpp  neuron.cpp  neuron.hpp  spikeB  spikeC  spikeD  unittestneuron.cpp
partie2buffer/: CMakeLists.txt  CMakeLists.txt~  Makefile  Membpotfile  fichier_const.hpp  mainneuron.cpp  neuron.cpp  neuron.hpp  test  unittestneuron.cpp
